app/base/namespace-dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev-namespace
  labels: 
    name: dev-vnamespace
