app/base/namespace-prod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod-namespace
  labels: 
    name: prod-vnamespace
