app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-django
  labels:
     name: sample-django
     owner: Voloshin_Nikolai
spec:
  selector:
    project: sample-django
  ports:
    - name      : app-listener
      protocol  : TCP
      port      : 8000  # Port on Load Balancer
