app/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-django-ingress
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: django.homeline.kg
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prod-sample-django
            port:
              number: 8000

   - host: django-dev.homeline.kg
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dev-sample-django
            port:
              number: 8000
